delete icons css

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -151,7 +151,8 @@
       "cart": "Cart",
       "recommend": "You may also like",
       "close": "Close",
-      "empty": "Your cart is currently empty!",
+      "empty_title": "SORRY, Your shopping cart is empty!",
+      "empty": "You have no items in your shopping cart.",
       "quantity": "Quantity",
       "total": "Total:",
       "remove": "Remove",
