--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -241,6 +241,16 @@
         }
       }
     },
+    "currency_format": {
+      "name": "Currency format",
+      "settings": {
+        "content": "Currency codes",
+        "paragraph": "Cart and checkout prices always show currency codes. Example: $1.00 USD.",
+        "currency_code_enabled": {
+          "label": "Show currency codes"
+        }
+      }
+    },
     "favicon": {
       "name": "Favicon",
       "settings": {
