--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -215,9 +215,9 @@
           "label": "Instagram",
           "info": "http:\/\/instagram.com\/shopify"
         },
-        "social_tiktok_link": {
-          "label": "TikTok",
-          "info": "https:\/\/tiktok.com\/@shopify"
+        "social_linkedin_link": {
+          "label": "Linkedin",
+          "info": "https:\/\/linkedin.com\/@shopify"
         },
         "social_whatsapp_link": {
           "label": "Whatsapp",
