--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -202,6 +202,10 @@
       "success": "Thanks for subscribing"
     }
   },
+  "header":{
+    "language": "Select Language",
+    "currency": "Select Currency"
+  },
   "pages":{
     "wishlist": "Wishlist",
     "compare": "Compare"
