fix mobile version

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -203,6 +203,10 @@
     }
   },
   "header":{
+    "navigation": "Navigation",
+    "categories": "Categories",
+    "help": "Need help?",
+    "top-menu": "Informations",
     "language": "Select Language",
     "currency": "Select Currency"
   },
