add footer content, small fix

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -141,6 +141,7 @@
   },
   "sections": {
     "footer": {
+      "reserved": "All Rights Reserved",
       "view_all": "View all",
       "scroll_up": "Scroll up",
       "divider": "Divider",
