style default collections

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -201,7 +201,11 @@
       "label": "Your email",
       "button": "Subscribe",
       "success": "Thanks for subscribing"
+    },
+    "collections": {
+      "products": "Products"
     }
+
   },
   "header":{
     "navigation": "Navigation",
