add and style section

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -173,7 +173,7 @@
     },
     "load_more": "Load more",
     "clear": "Clear",
-    "filter": "Filter",
+    "filter": "Filter by",
     "sort": "Sort",
     "newest_oldest": "Newest-oldest",
     "oldest_newest": "Oldest-newest",
