--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -39,10 +39,13 @@
   },
   "customer": {
     "account": {
-      "title": "Account",
+      "title": "Welcome back",
+      "title_short": "Welcome",
       "details": "Account details",
+      "edit": "Edit details",
       "view_addresses": "View addresses",
-      "return": "Return to Account details"
+      "return": "Return to Account details",
+      "nav_title": "My Account"
     },
     "account_fallback": "Account",
     "activate_account": {
@@ -55,8 +58,9 @@
     },
     "addresses": {
       "title": "Addresses",
+      "address_book": "Address Book",
       "default": "Default",
-      "add_new": "Add a new address",
+      "add_new": "Add an address",
       "edit_address": "Edit address",
       "first_name": "First name",
       "last_name": "Last name",
@@ -68,16 +72,18 @@
       "province": "Province",
       "zip": "Postal\/ZIP code",
       "phone": "Phone",
-      "set_default": "Set as default address",
+      "set_default": "Make this my default address",
       "add": "Add address",
       "update": "Update address",
+      "save": "Save",
       "cancel": "Cancel",
       "edit": "Edit",
       "delete": "Delete",
+      "delete_address": "Delete address",
       "delete_confirm": "Are you sure you wish to delete this address?"
     },
-    "log_in": "Login",
-    "log_out": "Log out",
+    "log_in": "Log in",
+    "log_out": "Sign out",
     "sign_up": "Sign up",
     "login_page": {
       "cancel": "Cancel",
@@ -99,10 +105,15 @@
       "cancelled_html": "Order Cancelled on {{ date }}",
       "cancelled_reason": "Reason: {{ reason }}",
       "billing_address": "Billing Address",
+      "billed_to": "Billed to",
       "payment_status": "Payment Status",
       "shipping_address": "Shipping Address",
+      "shipped": "Shipped",
+      "shipped_to": "Shipped to",
       "fulfillment_status": "Fulfillment Status",
+      "delivery_status": "Delivery Status",
       "discount": "Discount",
+      "discount_applied": "Discount applied",
       "shipping": "Shipping",
       "tax": "Tax",
       "product": "Product",
@@ -115,7 +126,8 @@
       "tracking_url": "Tracking link",
       "tracking_company": "Carrier",
       "tracking_number": "Tracking number",
-      "subtotal": "Subtotal"
+      "subtotal": "Subtotal",
+      "help": "If you have a question about your order, email {{ email }} with your order number."
     },
     "orders": {
       "title": "Order history",
@@ -123,9 +135,13 @@
       "order_number_link": "Order number {{ number }}",
       "date": "Date",
       "payment_status": "Payment status",
+      "payment": "Payment",
       "fulfillment_status": "Fulfillment status",
       "total": "Total",
-      "none": "You haven't placed any orders yet."
+      "none": "You haven't placed any orders yet.",
+      "view_cta": "View Order",
+      "item_count": "items",
+      "single_item": "item"
     },
     "recover_password": {
       "title": "Forgot password?",
@@ -144,11 +160,12 @@
       "submit": "Create"
     },
     "reset_password": {
-      "title": "Reset account password",
-      "subtext": "Enter a new password for {{ email }}",
+      "title": "Reset Your Password",
+      "subtext": "Please enter new password below",
       "password": "Password",
       "password_confirm": "Confirm password",
-      "submit": "Reset password"
+      "submit": "Reset password",
+      "error": "This is an error message."
     }
   },
   "blogs": {
