--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -1,5 +1,16 @@
 {
   "general": {
+    "password_page": {
+      "login_form_heading": "Enter store using password:",
+      "login_password_button": "Enter using password",
+      "login_form_password_label": "Password",
+      "login_form_password_placeholder": "Your password",
+      "login_form_error": "Wrong password!",
+      "login_form_submit": "Enter",
+      "modal": "Password modal",
+      "admin_link_html": "Are you the store owner? <a href=\"\/admin\" class=\"link underlined-link\">Log in here<\/a>",
+      "powered_by_shopify_html": "This shop will be powered by {{ shopify }}"
+    },
     "social": {
       "alt_text": {
         "share_on_facebook": "Share on Facebook",
@@ -21,7 +32,8 @@
       "page": "Page {{ number }}",
       "next": "Next page",
       "previous": "Previous page"
-    }
+    },
+    "continue_shopping": "Continue shopping"
   },
   "accessibility": {
     "skip_to_text": "Skip to content",
