--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -255,6 +255,7 @@
       "inventory_out_of_stock_continue_selling": "In stock",
       "sku": "SKU",
       "on_sale": "Sale",
+      "sale": "Sale",
       "product_variants": "Product variants",
       "media": {
         "gallery_viewer": "Gallery Viewer",
@@ -308,6 +309,10 @@
       "label": "Media gallery"
     },
     "facets": {
+      
+      "view_as": "View as:",
+      "list": "View List",
+      "grid": "View Grid",
       "apply": "Apply",
       "clear": "Clear",
       "clear_all": "Remove all",
