--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -277,14 +277,20 @@
       "inventory_out_of_stock_continue_selling": "In stock",
       "sku": "SKU",
       "barcode": "Barcode",
+      "collections_product": "Collections",
+      "type_product": "Product type",
+      "vendor_product": "Vendor",
+      "expires_in": "Expires in",
       "on_sale": "Sale",
       "sale": "Sale",
       "offer": "Offer",
       "new": "New",
       "sold": "Sold",
       "details": "Details",
+      "stock_hurry": "Hurry! Only",
       "stock_level": "Availability",
       "stock_items": "item(s)",
+      "stock_left": "Left!",
       "product_variants": "Product variants",
       "media": {
         "gallery_viewer": "Gallery Viewer",
@@ -333,6 +339,9 @@
       "xr_button_label": "View in your space, loads item in augmented reality window",
       "include_taxes": "Tax included.",
       "shipping_policy_html": "<a href=\"{{ link }}\">Shipping</a> calculated at checkout.",
+      "ask_size_guide":"Size guide",
+      "ask_shipping":"Shipping",
+      "ask_title":"Ask a question",
       "ask_btn":"Notify me",
       "ask_text":"Have a question about this product?",
       "ask_body":"Body",
