--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -269,8 +269,8 @@
         "one": "The product ( {{ product_title }} - has been removed from your wishlist."
       },
       "add_to_wishlist": "Add to wishlist",
-      "no_results_wishlist":"There are no products wishlist",
-      "no_results_compare":"There are no products to compare",
+      "no_results_wishlist": "There are no products wishlist",
+      "no_results_compare": "There are no products to compare",
       "choose_options": "Choose options",
       "choose_product_options": "Choose options for {{ product_name }}",
       "description": "Description",
@@ -315,14 +315,14 @@
         "minimum_of": "Minimum of {{ quantity }}",
         "maximum_of": "Maximum of {{ quantity }}",
         "multiples_of": "Increments of {{ quantity }}",
-        "in_cart_html": "<span class=\"quantity-cart\">{{ quantity }}</span> in cart"
+        "in_cart_html": "<span class=\"quantity-cart\">{{ quantity }}<\/span> in cart"
       },
       "pickup_availability": {
         "view_store_info": "View store information",
         "check_other_stores": "Check availability at other stores",
         "pick_up_available": "Pickup available",
-        "pick_up_available_at_html": "Pickup available at <span class=\"color-foreground\">{{ location_name }}</span>",
-        "pick_up_unavailable_at_html": "Pickup currently unavailable at <span class=\"color-foreground\">{{ location_name }}</span>",
+        "pick_up_available_at_html": "Pickup available at <span class=\"color-foreground\">{{ location_name }}<\/span>",
+        "pick_up_unavailable_at_html": "Pickup currently unavailable at <span class=\"color-foreground\">{{ location_name }}<\/span>",
         "unavailable": "Couldn't load pickup availability",
         "refresh": "Refresh"
       },
@@ -343,21 +343,21 @@
       "xr_button": "View in your space",
       "xr_button_label": "View in your space, loads item in augmented reality window",
       "include_taxes": "Tax included.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Shipping</a> calculated at checkout.",
-      "ask_size_guide":"Size guide",
-      "ask_shipping":"Shipping",
-      "ask_title":"Ask a question",
-      "ask_btn":"Notify me",
-      "ask_text":"Have a question about this product?",
-      "ask_body":"Body",
-      "ask_value":"Ask about this product",
-      "ask_email":"Enter your email",
-      "ask_name":"Your Name",
-      "ask_phone":"Your Phone",
-      "ask_comment":"Add your comment about the product of interest to you",
-      "ask_send":"Send Message",
-      "buy_more":"Buy more save more!",
-      "buy_more_btn":"Add"
+      "shipping_policy_html": "<a href=\"{{ link }}\">Shipping<\/a> calculated at checkout.",
+      "ask_size_guide": "Size guide",
+      "ask_shipping": "Shipping",
+      "ask_title": "Ask a question",
+      "ask_btn": "Notify me",
+      "ask_text": "Have a question about this product?",
+      "ask_body": "Body",
+      "ask_value": "Ask about this product",
+      "ask_email": "Enter your email",
+      "ask_name": "Your Name",
+      "ask_phone": "Your Phone",
+      "ask_comment": "Add your comment about the product of interest to you",
+      "ask_send": "Send Message",
+      "buy_more": "Buy more save more!",
+      "buy_more_btn": "Add"
     },
     "product_count_html": {
       "one": "Showing {{ product_count }} of {{ count }} product",
@@ -368,7 +368,6 @@
       "label": "Media gallery"
     },
     "facets": {
-      
       "view_as": "View as:",
       "list": "View List",
       "grid": "View Grid",
@@ -466,7 +465,6 @@
         "unit_price": "Unit price"
       }
     },
-    
     "cart": {
       "cart": "Cart",
       "recommend": "You may also like",
@@ -556,9 +554,8 @@
       "show_results": "Show results",
       "close": "Close"
     }
-
   },
-  "header":{
+  "header": {
     "days": "Days",
     "hours": "Hrs",
     "minutes": "Min",
@@ -570,11 +567,11 @@
     "language": "Select Language",
     "currency": "Select Currency"
   },
-  "pages":{
+  "pages": {
     "wishlist": "Wishlist",
     "compare": "Compare"
   },
-  "breadcrumbs":{
+  "breadcrumbs": {
     "home": "Home",
     "collections": "Collections",
     "search": "Search",
