--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -309,6 +309,9 @@
         }
       }
     },
+    "cart": {
+      "name": "Cart"
+    },
     "apps": {
       "name": "Apps",
       "settings": {
